@@ -235,6 +235,10 @@ k_dcop:
     double ptTabStopValue() const;
     void setPtTabStopValue ( double _tabStop );
 
+    bool cursorInProtectedArea()const;
+    void setCursorInProtectedArea( bool b );
+
+
 private:
     KPresenterDoc *doc;
 
