@@ -646,7 +646,12 @@ ConfigureDefaultDocPage::ConfigureDefaultDocPage(KPresenterView *_view, QVBox *b
     m_oldTabStopWidth = doc->tabStopValue();
     m_tabStopWidth->setValue( KoUnit::ptToUnit( m_oldTabStopWidth, doc->getUnit() ));
 
+    QVGroupBox* gbDocumentCursor = new QVGroupBox( i18n("Cursor"), box );
+    gbDocumentCursor->setMargin( 10 );
+    gbDocumentCursor->setInsideSpacing( KDialog::spacingHint() );
 
+    m_cursorInProtectedArea= new QCheckBox(i18n("Cursor in protected area"),gbDocumentCursor);
+    m_cursorInProtectedArea->setChecked(doc->cursorInProtectedArea());
 }
 
 ConfigureDefaultDocPage::~ConfigureDefaultDocPage()
@@ -667,6 +672,13 @@ KCommand *ConfigureDefaultDocPage::apply()
         m_pView->kPresenterDoc()->setAutoSave( autoSaveVal*60 );
         oldAutoSaveValue=autoSaveVal;
     }
+    bool state = m_cursorInProtectedArea->isChecked();
+    if ( state != doc->cursorInProtectedArea() )
+    {
+        config->writeEntry( "cursorInProtectArea", state );
+        m_pView->kPresenterDoc()->setCursorInProtectedArea( state );
+    }
+
     KMacroCommand *macro = 0L;
     int newStartingPage=m_variableNumberOffset->value();
     if(newStartingPage!=m_oldStartingPage)
@@ -694,7 +706,7 @@ void ConfigureDefaultDocPage::slotDefault()
 {
     autoSave->setValue( m_pView->kPresenterDoc()->defaultAutoSave()/60 );
     m_variableNumberOffset->setValue(1);
-
+    m_cursorInProtectedArea->setChecked(true);
 }
 
 void ConfigureDefaultDocPage::selectNewDefaultFont() {
